EXTRA_DIST = \
	include/GL/glew.h \
	include/GL/glxew.h \
	include/GL/wglew.h \
	include/SDL.h \
	include/SDL_active.h \
	include/SDL_audio.h \
	include/SDL_byteorder.h \
	include/SDL_cdrom.h \
	include/SDL_config.h \
	include/SDL_config_dreamcast.h \
	include/SDL_config_macos.h \
	include/SDL_config_macosx.h \
	include/SDL_config_minimal.h \
	include/SDL_config_nds.h \
	include/SDL_config_os2.h \
	include/SDL_config_symbian.h \
	include/SDL_config_win32.h \
	include/SDL_copying.h \
	include/SDL_cpuinfo.h \
	include/SDL_endian.h \
	include/SDL_error.h \
	include/SDL_events.h \
	include/SDL_getenv.h \
	include/SDL_image.h \
	include/SDL_joystick.h \
	include/SDL_keyboard.h \
	include/SDL_keysym.h \
	include/SDL_loadso.h \
	include/SDL_main.h \
	include/SDL_mouse.h \
	include/SDL_mutex.h \
	include/SDL_name.h \
	include/SDL_opengl.h \
	include/SDL_platform.h \
	include/SDL_quit.h \
	include/SDL_rwops.h \
	include/SDL_stdinc.h \
	include/SDL_syswm.h \
	include/SDL_thread.h \
	include/SDL_timer.h \
	include/SDL_types.h \
	include/SDL_version.h \
	include/SDL_video.h \
	include/begin_code.h \
	include/close_code.h \
	include/freetype/config/ftconfig.h \
	include/freetype/config/ftheader.h \
	include/freetype/config/ftmodule.h \
	include/freetype/config/ftoption.h \
	include/freetype/config/ftstdlib.h \
	include/freetype/freetype.h \
	include/freetype/ftadvanc.h \
	include/freetype/ftbbox.h \
	include/freetype/ftbdf.h \
	include/freetype/ftbitmap.h \
	include/freetype/ftcache.h \
	include/freetype/ftchapters.h \
	include/freetype/ftcid.h \
	include/freetype/fterrdef.h \
	include/freetype/fterrors.h \
	include/freetype/ftgasp.h \
	include/freetype/ftglyph.h \
	include/freetype/ftgxval.h \
	include/freetype/ftgzip.h \
	include/freetype/ftimage.h \
	include/freetype/ftincrem.h \
	include/freetype/ftlcdfil.h \
	include/freetype/ftlist.h \
	include/freetype/ftlzw.h \
	include/freetype/ftmac.h \
	include/freetype/ftmm.h \
	include/freetype/ftmodapi.h \
	include/freetype/ftmoderr.h \
	include/freetype/ftotval.h \
	include/freetype/ftoutln.h \
	include/freetype/ftpfr.h \
	include/freetype/ftrender.h \
	include/freetype/ftsizes.h \
	include/freetype/ftsnames.h \
	include/freetype/ftstroke.h \
	include/freetype/ftsynth.h \
	include/freetype/ftsystem.h \
	include/freetype/fttrigon.h \
	include/freetype/fttypes.h \
	include/freetype/ftwinfnt.h \
	include/freetype/ftxf86.h \
	include/freetype/internal/autohint.h \
	include/freetype/internal/ftcalc.h \
	include/freetype/internal/ftdebug.h \
	include/freetype/internal/ftdriver.h \
	include/freetype/internal/ftgloadr.h \
	include/freetype/internal/ftmemory.h \
	include/freetype/internal/ftobjs.h \
	include/freetype/internal/ftpic.h \
	include/freetype/internal/ftrfork.h \
	include/freetype/internal/ftserv.h \
	include/freetype/internal/ftstream.h \
	include/freetype/internal/fttrace.h \
	include/freetype/internal/ftvalid.h \
	include/freetype/internal/internal.h \
	include/freetype/internal/pcftypes.h \
	include/freetype/internal/psaux.h \
	include/freetype/internal/pshints.h \
	include/freetype/internal/services/svbdf.h \
	include/freetype/internal/services/svcid.h \
	include/freetype/internal/services/svgldict.h \
	include/freetype/internal/services/svgxval.h \
	include/freetype/internal/services/svkern.h \
	include/freetype/internal/services/svmm.h \
	include/freetype/internal/services/svotval.h \
	include/freetype/internal/services/svpfr.h \
	include/freetype/internal/services/svpostnm.h \
	include/freetype/internal/services/svpscmap.h \
	include/freetype/internal/services/svpsinfo.h \
	include/freetype/internal/services/svsfnt.h \
	include/freetype/internal/services/svttcmap.h \
	include/freetype/internal/services/svtteng.h \
	include/freetype/internal/services/svttglyf.h \
	include/freetype/internal/services/svwinfnt.h \
	include/freetype/internal/services/svxf86nm.h \
	include/freetype/internal/sfnt.h \
	include/freetype/internal/t1types.h \
	include/freetype/internal/tttypes.h \
	include/freetype/t1tables.h \
	include/freetype/ttnameid.h \
	include/freetype/tttables.h \
	include/freetype/tttags.h \
	include/freetype/ttunpat.h \
	include/ft2build.h \
	include/ogg/ogg.h \
	include/ogg/os_types.h \
	include/sigc++/adaptors/adaptor_trait.h \
	include/sigc++/adaptors/adaptors.h \
	include/sigc++/adaptors/bind.h \
	include/sigc++/adaptors/bind_return.h \
	include/sigc++/adaptors/bound_argument.h \
	include/sigc++/adaptors/compose.h \
	include/sigc++/adaptors/deduce_result_type.h \
	include/sigc++/adaptors/exception_catch.h \
	include/sigc++/adaptors/hide.h \
	include/sigc++/adaptors/lambda/base.h \
	include/sigc++/adaptors/lambda/group.h \
	include/sigc++/adaptors/lambda/lambda.cc \
	include/sigc++/adaptors/lambda/lambda.h \
	include/sigc++/adaptors/lambda/operator.h \
	include/sigc++/adaptors/lambda/select.h \
	include/sigc++/adaptors/retype.h \
	include/sigc++/adaptors/retype_return.h \
	include/sigc++/bind.h \
	include/sigc++/bind_return.h \
	include/sigc++/class_slot.h \
	include/sigc++/connection.h \
	include/sigc++/functors/functor_trait.h \
	include/sigc++/functors/functors.h \
	include/sigc++/functors/mem_fun.h \
	include/sigc++/functors/ptr_fun.h \
	include/sigc++/functors/slot.cc \
	include/sigc++/functors/slot.h \
	include/sigc++/functors/slot_base.cc \
	include/sigc++/functors/slot_base.h \
	include/sigc++/hide.h \
	include/sigc++/limit_reference.h \
	include/sigc++/method_slot.h \
	include/sigc++/object.h \
	include/sigc++/object_slot.h \
	include/sigc++/reference_wrapper.h \
	include/sigc++/retype.h \
	include/sigc++/retype_return.h \
	include/sigc++/sigc++.h \
	include/sigc++/signal.h \
	include/sigc++/signal_base.h \
	include/sigc++/slot.h \
	include/sigc++/trackable.h \
	include/sigc++/type_traits.h \
	include/sigc++/visit_each.h \
	include/sigc++config.h \
	include/vorbis/codec.h \
	include/vorbis/vorbisenc.h \
	include/vorbis/vorbisfile.h \
	lib/SDL.dll \
	lib/SDL.lib \
	lib/SDL_image.dll \
	lib/SDL_image.lib \
	lib/SDLmain.lib \
	lib/freetype2312MT.lib \
	lib/glew32.dll \
	lib/glew32.lib \
	lib/libogg.dll \
	lib/libogg.lib \
	lib/libogg_static_vc2010_debug.lib \
	lib/libogg_static_vc2010_release.lib \
	lib/libpng12-0.dll \
	lib/libvorbis.dll \
	lib/libvorbis.lib \
	lib/libvorbis_static_vc2010_debug.lib \
	lib/libvorbis_static_vc2010_release.lib \
	lib/libvorbisfile.dll \
	lib/libvorbisfile.lib \
	lib/libvorbisfile_static_vc2010_debug.lib \
	lib/libvorbisfile_static_vc2010_release.lib \
	lib/sigc-vc2010-2_2_8.dll \
	lib/sigc-vc2010-2_2_8.lib \
	lib/sigc-vc2010-d-2_2_8.dll \
	lib/sigc-vc2010-d-2_2_8.lib \
	lib/sigc-vc90-2_0.dll \
	lib/sigc-vc90-2_0.lib \
	lib/sigc-vc90-d-2_0.dll \
	lib/sigc-vc90-d-2_0.lib \
	lib/zlib1.dll \
	src/msvc_bug.cpp \
	src/pch.cpp \
	src/pch.h \
	src/perlintest.cpp \
	src/win32-dirent.cpp \
	src/win32-dirent.h \
	vc2008/perlintest.vcproj \
	vc2008/pioneer-msvc-9.0.sln \
	vc2008/pioneer-msvc-9.0.vcproj \
	vc2008/sbreviewer-msvc-9.0.vcproj \
	vc2010/lua.vcxproj \
	vc2010/lua.vcxproj.filters \
	vc2010/modelviewer.vcxproj \
	vc2010/modelviewer.vcxproj.filters \
	vc2010/perlintest.vcxproj \
	vc2010/perlintest.vcxproj.filters \
	vc2010/pioneer.sln \
	vc2010/pioneer.vcxproj \
	vc2010/pioneer.vcxproj.filters

include $(top_srcdir)/Makefile.common
