EXTRA_DIST = \
	src/msvc_bug.cpp \
	src/pch.cpp \
	src/pch.h \
	src/perlintest.cpp \
	src/win32-dirent.cpp \
	src/win32-dirent.h \
	vc2008/perlintest.vcproj \
	vc2008/pioneer-msvc-9.0.sln \
	vc2008/pioneer-msvc-9.0.vcproj \
	vc2008/sbreviewer-msvc-9.0.vcproj \
	vc2010/lua.vcxproj \
	vc2010/lua.vcxproj.filters \
	vc2010/modelviewer.vcxproj \
	vc2010/modelviewer.vcxproj.filters \
	vc2010/perlintest.vcxproj \
	vc2010/perlintest.vcxproj.filters \
	vc2010/pioneer.sln \
	vc2010/pioneer.vcxproj \
	vc2010/pioneer.vcxproj.filters

include $(top_srcdir)/Makefile.common
