#  Process this file with automake to produce Makefile.in
include $(top_srcdir)/Makefile.common

noinst_LIBRARIES = libjobswarm.a
libjobswarm_a_SOURCES = \
	CoreCount.cpp \
	JobManager.cpp \
	JobSwarm.cpp \
	ThreadConfig.cpp \
	ThreadSafeQueue.cpp

noinst_HEADERS = \
	CoreCount.h \
	JobManager.h \
	JobSwarm.h \
	pool.h \
	ThreadConfig.h \
	ThreadSafeQueue.h \
	UserMemAlloc.h
