#  Process this file with automake to produce Makefile.in
include $(top_srcdir)/Makefile.common

noinst_LIBRARIES = libjobswarm.a
libjobswarm_a_SOURCES = \
	CoreCount.cpp \
	JobManager.cpp \
	JobSwarm.cpp \
	LockFreeQ.cpp \
	ThreadConfig.cpp

noinst_HEADERS = \
	CoreCount.h \
	JobManager.h \
	JobSwarm.h \
	LockFreeQ.h \
	pool.h \
	ThreadConfig.h \
	UserMemAlloc.h
